@@ -3,5 +3,5 @@
 ##
   Meta:		1
   Name:		powerman
-  Version:	1.0.22
+  Version:	1.0.23
   Release:	1
