@@ -1,4 +1,9 @@
-PowerMan version 1.0.22 News                                     12 Oct 2006
+PowerMan version 1.0.23 News                                     16 Feb 2006
+
+This is a very minor release in preparation for Fedora submission.
+
+
+PowerMan version 1.0.22 News                                     12 Oct 2005
 
 Bugs fixed:
 
