@@ -2,6 +2,12 @@
 
     * test/vpcd.c: handle undefined PTHREAD_THREADS_MAX on FC4.
 
+    * Makefile, src/Makefile: take release number out of version string.
+
+    * powerman.spec: spec file changes for Fedora submission [Ben Woodard]
+
+    * : tag powerman-1.0.23
+
 2005-10-12 Jim Garlick <garlick@llnl.gov>
 
     * Makefile, Make-rpm.mk, META: Update for Chris's build script.
